test/corpus/comments.txt
==================
Comments
==================
Narrative:
!-- this is a comment
As a user
I want something

Scenario: with comment
!-- another comment
Given a step

---

(source_file
  (narrative
    (narrative_kw)
    (comment)
    (free_text
      (free_text_line)
      (free_text_line)))
  (scenario
    (scenario_kw)
    title: (title)
    (comment)
    (step
      (step_keyword (given_kw))
      (step_text (step_text_fragment)))))
