test/corpus/meta.txt
==================
Meta with multiple tags
==================
Meta:
@author John
@priority high
@flaky

Scenario: dummy
Given a step

---

(source_file
  (meta
    (meta_kw)
    (meta_line
      (tag (tag_name) (tag_value)))
    (meta_line
      (tag (tag_name) (tag_value)))
    (meta_line
      (tag (tag_name))))
  (scenario
    (scenario_kw)
    title: (title)
    (step
      (step_keyword (given_kw))
      (step_text (step_text_fragment)))))

==================
Meta tags without leading @ (bare issue refs)
==================
Meta:
@author John
Issue ABC-123
XYZ-456

Scenario: dummy
Given a step

---

(source_file
  (meta
    (meta_kw)
    (meta_line
      (tag (tag_name) (tag_value)))
    (meta_line
      (tag (tag_name) (tag_value)))
    (meta_line
      (tag (tag_name))))
  (scenario
    (scenario_kw)
    title: (title)
    (step
      (step_keyword (given_kw))
      (step_text (step_text_fragment)))))
